tests/interp/bad/exists-6.ngc
;bad number format (conversion failed) parsing ''
G0 X EXISTS[#]
M2
